fixed startpage style issue on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -216,6 +216,7 @@ button {
     border-radius: 1em;
     box-shadow: 0 0 1em #5a5a5a;
     font-weight: 500;
+    overflow-y: scroll;
 }
 
 .startscreen-overlay {
@@ -230,6 +231,14 @@ button {
 @media (max-width: 40em) {
     .startscreen {
         margin-left: 0;
+
+        border-radius: 0;
+    }
+}
+
+@media (max-height: 40em) {
+    .startscreen {
+        margin-top: 0;
         border-radius: 0;
     }
 }
